CADC-12341 updates from running against prod vault, added async move test